# HQP_DualArmMobile

./: CMakeLists.txt  Huksy_Franka_Dual_arm(torque).ttt  Huksy_Franka_Dual_arm.ttt  Huksy_Franka_single_arm.ttt  Inverse-dynamics.h  README.md  Vrep_HQP.vcxproj  Vrep_HQP.vcxproj.filters  constraint-base.cpp  constraint-base.h  constraint-bound.cpp  constraint-bound.h  constraint-equality.cpp  constraint-equality.h  constraint-inequality.cpp  constraint-inequality.h  contact-3d.cpp  contact-3d.h  contact-base.cpp  contact-base.h  container.h  eiguadprog-fast.cpp  eiquadprog_2011.h  fwd.h  fwd_constraints.h  fwd_solver.h  inverse-dynamics.cpp  main.cpp  motion.h  panda_jointdamping(torque).ttt  panda_jointdamping.ttt  robot_model.cpp  robot_model.h  solver-HQP-base.cpp  solver-HQP-base.h  solver-HQP-eiquadprog.cpp  solver-HQP-eiquadprog.h  solver-HQP-factory.cpp  solver-HQP-factory.h  solver-HQP-factory.hxx  (+29 more)
build-rel/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  test_humanoid
build-rel/cmake/: cmake_uninstall.cmake
build-rel/include/hqp/: config.hh  deprecated.hh  warning.hh
build-rel/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo-humanoid/: demo_mobilemanipulator.cpp
include/: fwd.h
include/contacts/: contact-3d.h  contact-base.h
include/controller/: Inverse-dynamics.h
include/robot/: robot_model.h
include/solvers/: eiquadprog_2011.h  fwd_solver.h  solver-HQP-base.h  solver-HQP-eiquadprog.h  solver-HQP-factory.h  solver-HQP-factory.hxx  solver-HQP-output.h  solver-HQP-qpoases.h  solver-utils.h
include/tasks/: task-base.h  task-joint-bounds.h  task-joint-posture.h  task-mobile.h  task-motion.h  task-operational.h  task-singularity.h
include/trajectories/: trajectory-base.h  trajectory-jointspace.h
include/utils/: motion.h  utils.h
include/vrep_bridge/: vrep_bridge.h
src/: CMakeLists.txt
src/constraint/: constraint-base.cpp  constraint-bound.cpp  constraint-equality.cpp  constraint-inequality.cpp
src/contacts/: contact-3d.cpp
src/controller/: inverse-dynamics.cpp
src/robot/: robot_model.cpp
src/solvers/: solver-HQP-base.cpp  solver-HQP-eiquadprog.cpp  solver-HQP-factory.cpp  solver-HQP-qpoases.cpp  solver-utils.cpp
src/tasks/: task-base.cpp  task-com.cpp  task-joint-bounds.cpp  task-joint-posture.cpp  task-mobile.cpp  task-motion.cpp  task-operational.cpp  task-singualrity.cpp
src/trajectories/: trajectory-jointspace.cpp  trajectory-operationalspace.cpp
src/utils/: utils.cpp
src/vrep_bridge/: vrep_bridge.cpp
windows code/fcl/: CMakeLists.txt  Rarm2__.ttt  Robostar_demo.ttt  controller.cpp  fcl_model.cpp  fcl_utility.cpp  main.cpp  main_.cpp  vrep_bridge.cpp
windows code/fcl/include/fcl/: fcl_model.h  fcl_utility.h
windows code/fcl/include/robot/: controller.h  haptic.h  math_type_define.h  robostar_7_dof_robot_hw_config.h  vrep_bridge.h
